# digital-garden

./: .markdownlint.json  .pre-commit-config.yaml  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  search.json  sitemap.xml  zensical.yml
.github/: dependabot.yml
.github/workflows/: gh-pages.yml
ants/: colony.html  feeding.html  index.html  suppliers.html
ants/camponotus_auriventris/: index.html
ants/camponotus_parius/: index.html
ants/careguide/: .pages  camponotus_auriventris.html  camponotus_parius.html  lasius_niger.html  messor_orientalis.html
ants/careguide/camponotus_auriventris/: index.html
ants/careguide/camponotus_parius/: index.html
ants/careguide/lasius_niger/: index.html
ants/colony/: index.html
ants/feeding/: .pages  best_ants_protein_jelly.html  index.html  waxworms.html
ants/feeding/waxworms/: index.html
ants/lasius_niger/: index.html
ants/messor_orientalis/: index.html
ants/suppliers/: index.html
brewing/: pinter.html
brewing/pinter/: index.html
docs/: .pages  CNAME  index.md
docs/ants/: .pages  colony.md  feeding.md  index.md  lasius_niger.md  suppliers.md
docs/brewing/: .pages  pinter.md
docs/network/: devices.md  index.md  topology.md
docs/projects/: .pages
docs/shopping/: .pages  blackfriday.md
network/: .pages  index.html
network/devices/: index.html
network/topology/: index.html
projects/pi-kube-cluster/: commands.html
search/: search_index.json
shopping/: blackfriday.html
shopping/blackfriday/: index.html
theme/: main.html
(+12 files in other folders)
