[project]
name = "digital-garden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "commitizen>=4.13.9",
    "gitdb2>=4.0.2",
    "mkdocs>=1.6.1",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.7.5",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-newsletter>=1.1.0",
    "mkdocs-rss-plugin>=1.17.9",
    "mkdocs-section-index>=0.3.10",
    "pre-commit>=4.5.1",
    "proselint>=0.16.0",
    "pymdown-extensions>=10.21",
]
